--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -33,3 +33,16 @@ footer{
     color: gray;
     text-align: right;
 }
+.logo{
+    width: 30px;
+    height: 60px;
+}
+.camp {
+    width: 1000px;
+} 
+.logo {
+    width: 50px;
+}
+.exc {
+    width:350px;
+}
