--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -33,16 +33,16 @@ footer{
     color: gray;
     text-align: right;
 }
-.logo{
-    width: 30px;
-    height: 60px;
-}
+
 .camp {
     width: 1000px;
+    display: block;
 } 
 .logo {
     width: 50px;
+    display: block;
 }
 .exc {
     width:350px;
+    display: block;
 }
