--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -37,12 +37,12 @@ footer{
 .camp {
     width: 1000px;
     display: block;
-    margin: 0 auto;
+    margin: 0px auto;
 } 
 .logo {
     width: 50px;
     display: block;
-    margin: 0 auto;
+    margin: 0px auto;
 
 }
 .exc {
